examples/test/testpolicy13856.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13856
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key33: value17
      key24: value44
      key36: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value49
          key24: value40
      podSelector:
        matchLabels:
          key1: value15
          key38: value9
